force-app/main/default/objects/Account/fields/createXeroContact__c.field-meta.xml
<CustomField>
    <fullName>createXeroContact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked it creates a contact</description>
    <label>createXeroContact</label>
    <type>Checkbox</type>
</CustomField>