force-app/main/default/objects/Account/fields/Same_as_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Same_as_Billing_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Copy Billing Address to Shipping address if checked</description>
    <label>Same as Billing Address</label>
    <type>Checkbox</type>
</CustomField>