force-app/main/default/objects/Account/fields/Xero_contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Xero_contact_ID__c</fullName>
    <label>Xero contact ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>